--- a/english.html
+++ b/english.html
@@ -273,6 +273,8 @@ Error message and password prompt
 
 <li>Ayala Malach Pines</li>
 
+<li>Baking</li>
+
 <li>Berry Sakharof</li>
 
 <li>bg</li>
@@ -411,6 +413,8 @@ Error message and password prompt
 
 <li>Laundry</li>
 
+<li>Lemon cookies</li>
+
 <li>Less is more</li>
 
 <li>Life is not About Talking</li>
@@ -443,6 +447,8 @@ Error message and password prompt
 
 <li>Nano and I</li>
 
+<li>Nectarine pie</li>
+
 <li>Nehama Vahetzi</li>
 
 <li>Northern Exposure</li>
@@ -457,7 +463,7 @@ Error message and password prompt
 
 <li>Pedro Almodóvar</li>
 
-<li>Philippe</li>
+<li>Philipp</li>
 
 <li>Pina Bausch</li>
 
@@ -540,6 +546,8 @@ Error message and password prompt
 <li>To draw</li>
 
 <li>Tomer</li>
+
+<li>Torte</li>
 
 <li>True stories</li>
 
@@ -8425,7 +8433,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215231212356" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216144722127" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8434,7 +8442,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Angelic [[Less is more]] [[To draw]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Nectarine pie]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8454,7 +8462,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215231428000" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216150021418" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8737,6 +8745,17 @@ I had difficult problems to solve back then, and she always listened, smiled and
 A [[soul]] was born by her inspiration. May she rest in peace.  
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
+</div>
+<div created="20200216150039212" modified="20200216150347339" tags="[[The estate]] [[Food addicts]]" title="Baking">
+<pre>
+[img[pictures/afiya.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Baking]]&quot;&gt;&gt;
+
+
+
+ &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
 </div>
 <div created="20191113143329168" modified="20200213151935184" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>[img[pictures/Berry-Sakharof.jpg]]
@@ -9488,7 +9507,16 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
 
 </pre>
 </div>
-<div created="20200215225741395" modified="20200215231905393" tags="[[The kitchen according to Genevieve]] Kitchens" title="Less is more">
+<div created="20200216144801309" modified="20200216145115733" tags="Recipes Baking [[Food addicts]]" title="Lemon cookies">
+<pre>
+[img[pictures/ugiyot-limon.jpg]]
+
+
+ &lt;&lt;heblink [[עוגיות חמאה ולימון]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200215225741395" modified="20200216144715940" tags="[[The kitchen according to Genevieve]] Kitchens" title="Less is more">
 <pre>
 [img[pictures/less-is-more.jpg]]
 
@@ -9502,9 +9530,9 @@ Well,
 
 It could go pretty wrong, your food- if you don't pay attention to what's suitable and how much of it.
 
-We were guests of Eva and Phillip this week, and there was a cake that Eva was embarrassed of me trying, &quot;because I've put all the nuts that stayed in the can instead of just a handful, and I knew it was wrong, and I did it&quot;, she apologized, and also made cookies and a pie. 
+We were guests of [[Eva|Eva Coen]] and [[Philipp]] this week, and there was a cake that Eva was embarrassed of me trying, &quot;because I've put all the nuts that stayed in the can instead of just a handful, and I knew it was wrong, and I did it&quot;, she apologized, and also made [[cookies|Lemon cookies]] and a [[pie|Nectarine pie]]. 
 
-The cake itself with the cinnamon and the maple was still tasty and sweet in the right way, but it's true that a long chewing process was involved in eating it, and the nuts took over, but I still ate more of it.
+[[The cake|Torte]] itself with the cinnamon and the maple was still tasty and sweet in the right way, but it's true that a long chewing process was involved in eating it, and the nuts took over, but I still ate more of it.
 
 Bottom line is, if you're standing in front of whatever it is and hesitating, wondering, which flavors to add, or the proper amount of sugar or salt, without any hesitation add less, because less is more. 
 
@@ -9673,6 +9701,14 @@ We celebrated the first birthday of my sweet Nano on November 1st at my parent's
  &lt;&lt;heblink [[ננו שלי ואני]]&gt;&gt;
 </pre>
 </div>
+<div created="20200216145327570" modified="20200216145500173" tags="Recipes Baking" title="Nectarine pie">
+<pre>
+[img[pictures/pie-naktarin.jpg]]
+
+
+
+ &lt;&lt;heblink [[פאי נקטרין]]&gt;&gt;</pre>
+</div>
 <div created="20200215181227245" modified="20200215182344292" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[True stories]]" title="Nehama Vahetzi">
 <pre>[img[pictures/nechama-vahetzi.jpg]]
 
@@ -9765,7 +9801,7 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
 </pre>
 </div>
-<div created="20200212172521280" modified="20200212172606177" tags="[[Coen sister]]" title="Philippe">
+<div created="20200212172521280" modified="20200216144216938" tags="[[Coen sister]]" title="Philipp">
 <pre>[img[pictures/phillip.jpg]]
 
  &lt;&lt;heblink [[פיליפ]]&gt;&gt;
@@ -9851,7 +9887,7 @@ From our [[rear window|https://www.imdb.com/title/tt0047396/]] you can mostly he
 
 </pre>
 </div>
-<div created="20200213162147811" modified="20200213162429620" tags="Metafiction [[How many songs can you even invent at all]] [[Food addicts]] [[The team]] [[Iry claims]]" title="Recipes">
+<div created="20200213162147811" modified="20200216150320017" tags="Metafiction [[How many songs can you even invent at all]] [[Food addicts]] [[The team]] [[Iry claims]]" title="Recipes">
 <pre>[img[pictures/matconim.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Recipes]]&quot;&gt;&gt;
@@ -10048,10 +10084,10 @@ I've come to the conclusion that I need to be ready for the nice enlightened veh
 
 </pre>
 </div>
-<div created="20200202171450477" modified="20200212175928821" tags="[[Monkeys with car keys]]" title="The first assembly">
+<div created="20200202171450477" modified="20200216144027375" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>[img[pictures/asefot.jpg]]
 
-!!![[Philippe]]:
+!!![[Philipp]]:
 
 Our first assembly was at the [[monometallic Christmas dinner|Christmas dinner]] that took place in December 2015, and since then we see each other all the time. The youngsters actually work together, and I come or show up to family's dinners and such.  
 A week ago (meaning more than a year after that Christmas dinner), it was the first time since then, that Yoyo asked us all to come, and everybody except [[Dandan who went|Dandan went]], came, including [[Iris|Iris the daughter]], the daughter of my beloved Eva. 
@@ -10202,7 +10238,7 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 
  &lt;&lt;heblink [[עושים שלום]]&gt;&gt;</pre>
 </div>
-<div created="20200215225422814" modified="20200215225523865" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]]" title="To draw">
+<div created="20200215225422814" modified="20200216150154177" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]]" title="To draw">
 <pre>
 [img[pictures/lezayer.jpg]]
 
@@ -10223,6 +10259,16 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 
 </pre>
+</div>
+<div created="20200216145644090" modified="20200216145753663" tags="Baking Recipes [[Food addicts]]" title="Torte">
+<pre>
+[img[pictures/tort.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[טורט]]&gt;&gt;</pre>
 </div>
 <div created="20200212161813277" modified="20200212162728261" tags="Metafiction" title="True stories">
 <pre>[img[pictures/sipurim-amitiim.jpg]]
