--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200213214722566" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215225217604" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216145910944" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215231357201" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216144739071" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10497,7 +10497,7 @@ well,
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20171216194951924" modified="20190415190142993" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200216150457464" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -10506,7 +10506,11 @@ well,
 
 את המתכון הזה [[איריס]] לימדה אותי עוד בימי [[הנחלה|הנחלה בה גדלתי]]. העבודה השקטה והמדודה, המחשבות על מה לפני ומה אחרי. חימום התנור. מראה של שוקולד מומס מתערבב לתוך קרם בהיר. בועות סירופ שמתרבות ומבהירות. בועות סירופ שמשחימות והופכות לקרמל. ביצים שמוקצפות עם סוכר והופכות לקצף עבה וזוהר. חומר שנמזג לתוך תבניות. עוגה גובהת בתנור. רחש סכין שננעצת בעוגה מוכנה ויוצאת יבשה.
 
-&lt;&lt;list-links filter:&quot;[tag[אפייה]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[אפייה]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [Baking]]&gt;&gt;
+</pre>
 </div>
 <div created="20180128153940319" modified="20200215174403848" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
@@ -11009,7 +11013,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Gabriel Fauré]]&gt;&gt;</pre>
 </div>
-<div created="20170619141108783" modified="20200215210326963" tags="[[סיפורים אמיתיים]] אימהות" title="גואן אופנה">
+<div created="20170619141108783" modified="20200216150415832" tags="[[סיפורים אמיתיים]] אימהות" title="גואן אופנה">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
 
 !!![[גואן יין]]:
@@ -13221,7 +13225,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * קולים פרוסות לחם בתנור עד לגוון הרצוי.
 * מרכיבים את הטוסט: מניחים פרוסה קלויה, מעליה מורחים טחינה גולמית, מעליה רסק עגבניות, מעל מניחים ירקות קלויים, גוררים פרמז'ן וזה מוכן.</pre>
 </div>
-<div created="20170624105143385" modified="20190314144950586" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="טורט">
+<div created="20170624105143385" modified="20200216145855330" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="טורט">
 <pre>[img[pictures/tort.jpg]]
 
 !!![[אווה]]:
@@ -13263,7 +13267,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
  
 הבוקר שמתי קצת יותר מידי פקאנים (זה היה סוף הקופסה, אז השתמשתי בכל מה שהיה, וזה היה קצת יותר ממה שצריך). את הפקאנים ערבבתי עם מעט סוכר וקנמון טחון אותם בחשתי בקלות פנימה. אחרי האפיה במקום להרטיב עם מיץ תפוזים השתמשתי בחמש כפות סירופ מייפל.
 
-</pre>
+
+&lt;&lt;englink [[Torte]]&gt;&gt;</pre>
 </div>
 <div created="20181209115549031" modified="20190617133937353" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="טל בייגלס">
 <pre>[img[pictures/tal-bagels.jpg]]
@@ -16114,7 +16119,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170627152813374" modified="20190314145144388" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="עוגיות חמאה ולימון">
+<div created="20170627152813374" modified="20200216145241692" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="עוגיות חמאה ולימון">
 <pre>[img[pictures/ugiyot-limon.jpg]]
 
 !!![[אווה]]:
@@ -16142,6 +16147,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 5. אופים ב-170 מעלות כ-10-20 דקות (שהאפיות יהיו אפויות אך בהירות)
 
 6. מקררים ושומרים בכלי אטום.
+
+&lt;&lt;englink [[Lemon cookies]]&gt;&gt;
 </pre>
 </div>
 <div created="20170407192128538" modified="20190314145157736" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="עוגיות קימל">
@@ -16858,7 +16865,7 @@ May the lord bless your soul, I love you girl</pre>
 
 </pre>
 </div>
-<div created="20170629220725238" modified="20190314145422912" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="פאי נקטרין">
+<div created="20170629220725238" modified="20200216145611156" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="פאי נקטרין">
 <pre>[img[pictures/pie-naktarin.jpg]]
 
 !!![[אווה]]:
@@ -16913,7 +16920,8 @@ May the lord bless your soul, I love you girl</pre>
 7. מגישים בטמפרטורת החדר.
 
 
-</pre>
+
+&lt;&lt;englink [[Nectarine pie]]&gt;&gt;</pre>
 </div>
 <div created="20161118213157653" modified="20190314145435050" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי פקאן עם קרמל">
 <pre>[img[pictures/pekan-pie.jpg]]
@@ -17190,7 +17198,7 @@ __אופן ההכנה____
 6. את משחת הכבד מוזגים לכלי הגשה או לתוך תבנית אנגליש מרופדת בניילון נצמד, אוטמים ומניחים במקרר ל 6 שעות לפחות.
 </pre>
 </div>
-<div created="20170401151233604" modified="20200212173128680" tags="[[אחות כהן]]" title="פיליפ">
+<div created="20170401151233604" modified="20200216143717620" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
 
 !!![[גורה]]:
@@ -17210,7 +17218,7 @@ __אופן ההכנה____
 היום, כידוע, [[אנחנו|האחיות כהן]] משפחה אחת [[גדולה ושמחה|המשק האוטרקי שלנו]].
 
 
-&lt;&lt;englink [[Philippe]]&gt;&gt;</pre>
+&lt;&lt;englink [[Philipp]]&gt;&gt;</pre>
 </div>
 <div created="20170417192958980" modified="20190126104712750" tags="[[אחיות חוץ]] סרטים" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
