--- a/english.html
+++ b/english.html
@@ -495,6 +495,8 @@ Error message and password prompt
 
 <li>Single parent children</li>
 
+<li>Six feet uner</li>
+
 <li>soul</li>
 
 <li>Spike Lee</li>
@@ -548,6 +550,8 @@ Error message and password prompt
 <li>Tomer</li>
 
 <li>Torte</li>
+
+<li>True blood</li>
 
 <li>True stories</li>
 
@@ -8442,7 +8446,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Nectarine pie]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Alan Ball]] [[Six feet uner]] Gura [[True blood]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8462,7 +8466,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216150021418" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216151039666" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8676,13 +8680,14 @@ In fact, when it comes to women I kinda dig the word woman.
 
  &lt;&lt;heblink [[גבר פריבילגי]]&gt;&gt;</pre>
 </div>
-<div created="20191113140946887" modified="20191113143105603" tags="[[outer sisters]] films tv [[tv series]]" title="Alan Ball">
+<div created="20191113140946887" modified="20200216153058575" tags="[[outer sisters]] films tv [[tv series]]" title="Alan Ball">
 <pre>[img[pictures/alan-ball.jpg]]
 
 !!![[Gura]]:
 
-I made this drawing from that picture of Alan Ball.
-Only two weeks ago I became aware of his existence, because only two weeks ago I started watching SIX FEET UNDER which I enjoyed very much, and two days after I finished UNDER, I moved on to TRUE BLOOD which is an abnormal entertainment.  Now I watch a chapter of HERE AND NOW every week and it keeps getting interesting. Watch the sweetheart.
+I made this drawing from [[that picture|https://www.npr.org/2012/08/24/160004142/alan-ball-on-leaving-true-blood-behind]] of [[Alan Ball|https://www.imdb.com/name/nm0050332/?ref_=tt_ov_wr]].
+
+Only two weeks ago I became aware of his existence, because only two weeks ago I started watching [[SIX FEET UNDER|Six feet uner]] which I enjoyed very much, and two days after I finished UNDER, I moved on to [[TRUE BLOOD|True blood]] which is an abnormal entertainment.  Now I watch a chapter of [[HERE AND NOW|https://www.imdb.com/title/tt5923012/]] every week and it keeps getting interesting. Watch [[the sweetheart|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
 
 
  &lt;&lt;heblink [[אלן בול]]&gt;&gt;
@@ -9887,7 +9892,7 @@ From our [[rear window|https://www.imdb.com/title/tt0047396/]] you can mostly he
 
 </pre>
 </div>
-<div created="20200213162147811" modified="20200216150320017" tags="Metafiction [[How many songs can you even invent at all]] [[Food addicts]] [[The team]] [[Iry claims]]" title="Recipes">
+<div created="20200213162147811" modified="20200216152409692" tags="Metafiction [[How many songs can you even invent at all]] [[Food addicts]] [[The team]] [[Iry claims]]" title="Recipes">
 <pre>[img[pictures/matconim.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Recipes]]&quot;&gt;&gt;
@@ -9980,14 +9985,24 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
  &lt;&lt;heblink [[ילדים חד הוריים]]&gt;&gt;
 </pre>
 </div>
-<div created="20191113140141218" modified="20200212160530160" tags="Metafiction" title="soul">
+<div created="20200216151750067" modified="20200216152312443" tags="TV [[TV Series]] [[Outer sisters]]" title="Six feet uner">
+<pre>
+[img[pictures/six-feet-under.jpg]]
+
+
+ &lt;&lt;heblink [[עמוק באדמה]]&gt;&gt;
+</pre>
+</div>
+<div created="20191113140141218" modified="20200216151001038" tags="Metafiction" title="soul">
 <pre>[img[pictures/neshama.jpg]]
 
 !!![[soul]]:
 
 
-I died few years ago, and after my death I realized, that for now, this is the living space of my soul. I can't fly any higher to my original region, and I'll have to be born again on earth.
-I had a certain choosing option, and I've asked to be born again only after the end of the next world war. My request was approved, and meanwhile I help souls who don't want to be born again in this world, to find an optimal place to be born. I also serve as a substitute guarding angel, &quot;Raphael&quot; type. 
+I died few years ago, and after my death I realized, that for now, this is the living space of my soul. I can't fly any higher to my original region, and I'll have to be born again on earth
+.
+I had a certain choosing option, and I've asked to be born again only after the end of the next world war. My request was approved, and meanwhile I help souls who don't want to be born again in this world, to find an optimal place to be born. I also serve as a substitute guarding angel, &quot;Raphael&quot; type.
+ 
 In my last metamorphosis I was a therapist, and it is my natural tendency. I had a wonderful metamorphosis full of greatness. Great parents, loving family, wonderful children, the love of a man, a professional success. I was very &quot;okish&quot;. One thing that wasn't really there- a release. I restrained, I held back. I was cautious. It was easy for me, because I believed in my deeds and I was very diligent. On account of these, my next reform is freedom and faith- it's not a simple metamorphosis, but it's a releasing one.
 
 
@@ -10269,6 +10284,15 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 
  &lt;&lt;heblink [[טורט]]&gt;&gt;</pre>
+</div>
+<div created="20200216152327999" modified="20200216152608194" tags="TV [[TV Series]] [[Food addicts]] [[How many songs can you even invent at all]]" title="True blood">
+<pre>
+[img[pictures/true-blood.jpg]]
+
+
+
+ &lt;&lt;heblink [[דם אמיתי]]&gt;&gt;
+</pre>
 </div>
 <div created="20200212161813277" modified="20200212162728261" tags="Metafiction" title="True stories">
 <pre>[img[pictures/sipurim-amitiim.jpg]]
