--- a/english.html
+++ b/english.html
@@ -8437,7 +8437,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216144722127" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216154704881" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8446,7 +8446,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Alan Ball]] [[Six feet uner]] Gura [[True blood]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Bjork [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8466,7 +8466,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216151039666" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216154640367" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8777,20 +8777,29 @@ This is Berry, who was a prince that mostly played and became a king who wrote a
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20191113141855567" modified="20200215132743329" tags="music [[outer sisters]]" title="Bjork">
+<div created="20191113141855567" modified="20200216154805227" tags="music [[outer sisters]]" title="Bjork">
 <pre>[img[pictures/bjork.jpg]]
 
 !!![[Rushell]]:
 
-Bjork is so cool for so many reasons. Gura likes this album very much.
-I chose to put this here. I like the song and I like the video.
+[[Bjork|https://en.wikipedia.org/wiki/Bj%C3%B6rk]] is so cool for so many reasons. 
+
+I chose to put [[this here|https://www.youtube.com/watch?v=loB0kmz_0MM]]. I like the song and I like the [[video|Michel Gondry]].
+
 Emotional landscapes
+
 They puzzle me
+
 The riddles get solved
+
 And you push me up to this
+
 State of emergency
+
 How beautiful to be!
+
 State of emergency
+
 Is where I want to be
 
 
