--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אלן בול]] [[דם אמיתי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="ביורק [[מישל גונדרי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216151948225" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216153740007" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10711,14 +10711,14 @@ well,
 אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים [[לפזר את האפר שלו|https://www.youtube.com/watch?v=Wk61MeDmk2M]].
 </pre>
 </div>
-<div created="20170623150317093" modified="20200212143624758" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="ביורק">
+<div created="20170623150317093" modified="20200216154518925" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="ביורק">
 <pre>[img[pictures/bjork.jpg]]
 
 !!![[ראשל]]:
 
-[[ביורק|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%95%D7%A8%D7%A7]] היא ממש מגניבה מכל כך הרבה בחינות. את [[האלבום הזה|https://www.youtube.com/watch?v=1iW8hvcIAJQ]], גורה מאד אוהבת.
+[[ביורק|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%95%D7%A8%D7%A7]] היא ממש מגניבה מכל כך הרבה בחינות. 
 
-אני בחרתי לשים כאן עכשיו את [[זה|https://www.youtube.com/watch?v=3ahhieWx7vc]]. אוהבת את השיר ואוהבת את [[הוידאו|מישל גונדרי]].
+אני בחרתי לשים כאן עכשיו את [[זה|https://www.youtube.com/watch?v=loB0kmz_0MM]]. אוהבת את השיר ואוהבת את [[הוידאו|מישל גונדרי]].
 
 
 
