--- a/english.html
+++ b/english.html
@@ -8437,7 +8437,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216154704881" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216160014693" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8446,7 +8446,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Bjork [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[John Irving]] [[Outer sister]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8466,7 +8466,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216154640367" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216160052539" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8762,12 +8762,12 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
 </div>
-<div created="20191113143329168" modified="20200213151935184" tags="music [[outer sisters]]" title="Berry Sakharof">
+<div created="20191113143329168" modified="20200216155421787" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>[img[pictures/Berry-Sakharof.jpg]]
 
 !!![[Yoyo]]:
 
-This is Berry, who was a prince that mostly played and became a king who wrote about how we sat near the aspirin river and composed Ibn Gabirol and sang Meir Ariel and no further words.
+[[This|http://magazin.org.il/userfiles/DSC_7393.JPG]] is [[Berry|https://en.wikipedia.org/wiki/Berry_Sakharof]], who was a prince that mostly [[played|https://www.youtube.com/watch?v=qcP_q2kfRCA&amp;list=PLBmjKCWbbNAvbkO0ngXchr31HaV5OtCSl]] and became a king who wrote about how we [[sat near the aspirin river|https://www.youtube.com/watch?v=2LH8kvivV-A]] and composed [[Ibn Gabirol|https://www.youtube.com/watch?v=iSJfAJ0VDN4]] and sang [[Meir Ariel|https://www.youtube.com/watch?v=yOd4AIP_FSg]] and no further words.
 
 
  &lt;&lt;heblink [[ברי סחרוף]]&gt;&gt;
@@ -9455,12 +9455,12 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
  &lt;&lt;heblink [[ג'ון גודמן]]&gt;&gt;</pre>
 </div>
-<div created="20191113143908637" modified="20191113144254373" tags="[[outer sisters]] films" title="John Irving">
+<div created="20191113143908637" modified="20200216160117821" tags="[[outer sisters]] films" title="John Irving">
 <pre>[img[pictures/john-irving.jpg]]
 
 !!![[Gura]]:
 
-John Irving is the soul writer of Yoyo, and he stands in one line as an outer sister with the Coen brothers.
+[[John Irving|https://en.wikipedia.org/wiki/John_Irving]] is the soul writer of [[Yoyo]], and he stands in one line as an [[outer sister|Outer sisters]] with the [[Coen brothers|Ethan and Joel Coen]].
 
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
