--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="ביורק [[מישל גונדרי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216153740007" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216154930651" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10794,14 +10794,14 @@ Is where I want to be
 3.  עוטפים בניילון נצמד ומקררים כחצי שעה.
 </pre>
 </div>
-<div created="20180326151902676" modified="20200212144640529" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="ברי סחרוף">
+<div created="20180326151902676" modified="20200216155013783" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="ברי סחרוף">
 <pre>[img[pictures/berry-sakharof.jpg]]
 
 !!![[יויו]]:
 
 [[זה|http://magazin.org.il/userfiles/DSC_7393.JPG]] [[ברי|https://he.wikipedia.org/wiki/%D7%91%D7%A8%D7%99_%D7%A1%D7%97%D7%A8%D7%95%D7%A3]] שהיה נסיך שבעיקר [[ניגן|https://www.youtube.com/watch?v=qcP_q2kfRCA&amp;list=PLBmjKCWbbNAvbkO0ngXchr31HaV5OtCSl]] והיה למלך שכתב [[על נהר אספירין ישבנו|https://www.youtube.com/watch?v=2LH8kvivV-A]] והלחין את [[אבן גבירול|https://www.youtube.com/watch?v=iSJfAJ0VDN4]] ושר [[מאיר אריאל|https://www.youtube.com/watch?v=yOd4AIP_FSg]] ואין מילים.
 
-&lt;&lt;englink [[berry Sakharof]]&gt;&gt;</pre>
+&lt;&lt;englink [[Berry Sakharof]]&gt;&gt;</pre>
 </div>
 <div created="20170806152634013" modified="20170806192815033" tags="[[אירי טוענת]]" title="ברכת השמש">
 <pre>[img[pictures/birkat-hashemesh.jpg]]
