--- a/english.html
+++ b/english.html
@@ -505,6 +505,8 @@ Error message and password prompt
 
 <li>The Baumans</li>
 
+<li>The Big Lebowski</li>
+
 <li>The blue is already here</li>
 
 <li>The Bridge</li>
@@ -8437,7 +8439,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216160014693" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216161031331" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8446,7 +8448,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[John Irving]] [[Outer sister]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8466,7 +8468,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216160052539" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216160321237" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9450,12 +9452,22 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
  
 </pre>
 </div>
-<div created="20200213150957064" modified="20200213153649871" tags="[[Outer sisters]] TV [[TV Series]] Films" title="John Goodman">
+<div created="20200213150957064" modified="20200216160940463" tags="[[Outer sisters]] TV [[TV Series]] Films" title="John Goodman">
 <pre>[img[pictures/john-goodman.jpg]]
+
+
+!!![[Yoyo]]:
+
+If you say [[John Goodman|https://www.imdb.com/name/nm0000422/]], even when I'm super depressed, it will make me happy and I'll smile and recall the sweet good funny smile of his.
+
+[[Dan Conner|https://www.imdb.com/title/tt0094540/characters/nm0000422?ref_=tt_cl_t2]] the husband of [[Roseanne|https://www.imdb.com/title/tt0094540/?ref_=nmbio_mbio]], [[Walter Sobchak|https://www.imdb.com/title/tt0118715/characters/nm0000422?ref_=tt_cl_t2]] from [[THE BIG LEBOWSKI|The Big Lebowski]], [[Fred Flintstone|https://www.imdb.com/title/tt0109813/characters/nm0000422?ref_=tt_cl_t1]] and other super beloved unforgettable characters.
+
+
+
 
  &lt;&lt;heblink [[ג'ון גודמן]]&gt;&gt;</pre>
 </div>
-<div created="20191113143908637" modified="20200216160117821" tags="[[outer sisters]] films" title="John Irving">
+<div created="20191113143908637" modified="20200216161046067" tags="[[outer sisters]] films" title="John Irving">
 <pre>[img[pictures/john-irving.jpg]]
 
 !!![[Gura]]:
@@ -10052,6 +10064,17 @@ And I say:
 &lt;&lt;list-links filter:&quot;[tag[The Baumans]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[משפחת באומן]]&gt;&gt;</pre>
+</div>
+<div created="20200216161009061" modified="20200216161120850" tags="Films [[Outer sisters]]" title="The Big Lebowski">
+<pre>
+[img[pictures/the-big-lebowski.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[ביג לבובסקי]]&gt;&gt;
+</pre>
 </div>
 <div created="20200212155206056" modified="20200215180604957" tags="[[True stories]] [[On the road to somewhere]]" title="The blue is already here">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
