--- a/english.html
+++ b/english.html
@@ -8448,7 +8448,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Berry Sakharof]] [[Jeff Bridges]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8468,7 +8468,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216160321237" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216161516083" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8764,8 +8764,10 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
 </div>
-<div created="20191113143329168" modified="20200216155421787" tags="music [[outer sisters]]" title="Berry Sakharof">
-<pre>[img[pictures/Berry-Sakharof.jpg]]
+<div created="20191113143329168" modified="20200216161655630" tags="music [[outer sisters]]" title="Berry Sakharof">
+<pre>
+[img[pictures/berry-sakharof.jpg]]
+
 
 !!![[Yoyo]]:
 
