--- a/english.html
+++ b/english.html
@@ -371,6 +371,8 @@ Error message and password prompt
 
 <li>Horses to Glue</li>
 
+<li>House</li>
+
 <li>Houses</li>
 
 <li>How many songs can you even invent at all</li>
@@ -8439,7 +8441,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216161031331" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216163042013" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8448,7 +8450,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Berry Sakharof]] [[Jeff Bridges]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="House [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8468,7 +8470,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216161516083" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216162500246" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8764,7 +8766,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
 </div>
-<div created="20191113143329168" modified="20200216161655630" tags="music [[outer sisters]]" title="Berry Sakharof">
+<div created="20191113143329168" modified="20200216162219609" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>
 [img[pictures/berry-sakharof.jpg]]
 
@@ -9308,6 +9310,21 @@ The [[Hora|https://en.wikipedia.org/wiki/Hora_(dance)]] is danced in a [[circle|
 
  &lt;&lt;heblink [[סוסים לדבק]]&gt;&gt;</pre>
 </div>
+<div created="20200216163004939" modified="20200216163303279" tags="TV [[TV Series]] Music Houses" title="House">
+<pre>
+[img[pictures/house.jpg]]
+
+
+
+ &lt;&lt;heblink [[האוס]]&gt;&gt;
+
+
+
+
+
+
+</pre>
+</div>
 <div created="20200212223417925" modified="20200212224353147" tags="Kitchens" title="Houses">
 <pre>[img[pictures/batim.jpg]]
 
@@ -9446,8 +9463,16 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
 </pre>
 </div>
-<div created="20200213151742129" modified="20200213152000244" tags="Films [[Outer sisters]] Music" title="Jeff Bridges">
+<div created="20200213151742129" modified="20200216163247798" tags="Films [[Outer sisters]] Music" title="Jeff Bridges">
 <pre>[img[pictures/jeff-bridges.jpg]]
+
+
+[[Yoyo]]:
+
+On [[Jeff Bridges's site|https://www.jeffbridges.com/]] you can see that he's done many things including many [[movies|https://www.jeffbridges.com/filmography.html]]. [[Eva|Eva Coen]] says that he's the most attractive actor, but [[Genevieve]], who lately became an enthusiastic [[HOUSE|House]] viewer, claims that [[Hugh Laurie|https://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]] takes him. [[Gura]] says that he's super handsome and that it was very hard for her to draw his cattish features, and finally she chose a picture from [[THE FABULOS BAKER BOYS|https://www.imdb.com/title/tt0097322/]].
+
+I say that I love Jeff Bridges, but more than all he's the [[dude|https://www.imdb.com/title/tt0118715/characters/nm0000313?ref_=tt_cl_t1]], even though that during the film's shooting he stopped smoking pot.
+
 
 
  &lt;&lt;heblink [[ג'ף ברידג'ס]]&gt;&gt;
