--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ברי סחרוף]] [[ג'ף ברידג'ס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'ף ברידג'ס]] האוס [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10976,12 +10976,12 @@ Is where I want to be
 
 [[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין.</pre>
 </div>
-<div created="20171212163308820" modified="20200213152115069" tags="[[אחיות חוץ]] סרטים" title="ג'ף ברידג'ס">
+<div created="20171212163308820" modified="20200216162652736" tags="[[אחיות חוץ]] סרטים" title="ג'ף ברידג'ס">
 <pre>[img[pictures/jeff-bridges.jpg]]
 
 !!![[יויו]]:
 
-באתר של [[ג'ף ברידג'ס|http://www.jeffbridges.com/]] אפשר לראות שהוא עושה הרבה דברים כולל הרבה מאד [[סרטים|http://www.jeffbridges.com/filmography.html]]. אווה אומרת שהוא השחקן הכי חתיך שיש, אבל ז'נבייב, שלאחרונה הפכה צופה אדוקה של [[האוס|http://www.imdb.com/title/tt0412142/]] טוענת [[שיו לורי|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]] לוקח אותו. גורה אומרת שהוא סופר חתיך ושהיה לה קשה מאד לצייר את כל תווי החתול שלו, בסופו של דבר בחרה תמונה [[מנערי בייקר המופלאים|http://www.imdb.com/title/tt0097322/]]. אני אומר שאני מת על ג'ף ברידג'ס, אבל הכי מהכל הוא [[the dude|http://www.imdb.com/title/tt0118715/characters/nm0000313?ref_=tt_cl_t1]], למרות שבהמלך צילומי הסרט הוא חדל מלעשן מריחואנה. 
+באתר של [[ג'ף ברידג'ס|http://www.jeffbridges.com/]] אפשר לראות שהוא עושה הרבה דברים כולל הרבה מאד [[סרטים|http://www.jeffbridges.com/filmography.html]]. אווה אומרת שהוא השחקן הכי חתיך שיש, אבל ז'נבייב, שלאחרונה הפכה צופה אדוקה של [[האוס]] טוענת [[שיו לורי|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]] לוקח אותו. גורה אומרת שהוא סופר חתיך ושהיה לה קשה מאד לצייר את כל תווי החתול שלו, בסופו של דבר בחרה תמונה [[מנערי בייקר המופלאים|http://www.imdb.com/title/tt0097322/]]. אני אומר שאני מת על ג'ף ברידג'ס, אבל הכי מהכל הוא [[the dude|http://www.imdb.com/title/tt0118715/characters/nm0000313?ref_=tt_cl_t1]], למרות שבהמלך צילומי הסרט הוא חדל מלעשן מריחואנה. 
 
 &lt;&lt;englink [[Jeff Bridges]]&gt;&gt;</pre>
 </div>
