--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ג'ף ברידג'ס]] האוס [[האחיות כהן]]" title="$:/StoryList">
+<div list="האוס [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10976,7 +10976,7 @@ Is where I want to be
 
 [[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין.</pre>
 </div>
-<div created="20171212163308820" modified="20200216162652736" tags="[[אחיות חוץ]] סרטים" title="ג'ף ברידג'ס">
+<div created="20171212163308820" modified="20200216163153523" tags="[[אחיות חוץ]] סרטים" title="ג'ף ברידג'ס">
 <pre>[img[pictures/jeff-bridges.jpg]]
 
 !!![[יויו]]:
@@ -12022,7 +12022,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20180414181844848" modified="20190310131339866" tags="סדרות מוזיקה בתים טלוויזיה" title="האוס">
+<div created="20180414181844848" modified="20200216163222683" tags="סדרות מוזיקה בתים טלוויזיה" title="האוס">
 <pre>[img[pictures/house.jpg]]
 
 !!![[הצוות]]:
@@ -12033,6 +12033,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 
 
+&lt;&lt;englink [[House]]&gt;&gt;
 </pre>
 </div>
 <div created="20170320161241857" modified="20181023114920639" tags="HH" title="האחיות K">
