--- a/english.html
+++ b/english.html
@@ -537,6 +537,8 @@ Error message and password prompt
 
 <li>The team</li>
 
+<li>The Wire</li>
+
 <li>the wishing star 01</li>
 
 <li>They cut down trees</li>
@@ -8441,7 +8443,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216163042013" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216170128284" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8450,7 +8452,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[David Byrne]] House [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The Wire]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8470,7 +8472,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216163458339" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216165527333" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9261,8 +9263,15 @@ She's one of the lucky fellows who were raised together in a group, who came fro
  &lt;&lt;heblink [[גורה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213153541799" modified="20200213153941924" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants" title="HaAchim">
+<div created="20200213153541799" modified="20200216170102914" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants" title="HaAchim">
 <pre>[img[pictures/the-brothers.jpg]]
+
+
+[[Yoyo]]:
+
+[[Tomer]] took us in the last time we visited ]]dad|Papa Yoel]], to eat at [[Haachim|https://www.haachim.co.il/]], the brothers, and at the moment we stepped in it was clear that we have business with [[sisters|Coen Sisters]]. It's always full of people who seem to be enjoying and happy, the alcohol is not that expensive compared to the republic, the nicest kindest staff. There are tables outside on the pavement, and in the inner part, there are different types of tables, the bar of the &quot;cold service&quot; and the drinking bar, and you can sit around them. The music is like walking in an Emir Kusturica's film, who met [[Tony Soprano|The Sopranos]] only without the murders and the fights, and then they went to meet the Greek from [[THE WIRE|The Wire]] in a good way, and met [[Arik Lavie|https://en.wikipedia.org/wiki/Arik_Lavie]]. It's really really tasty there. Meat and vegetables on the grill but not only, there are vegetables in many forms. I love their hummus and the pitas, and mostly the labaneh. Visiting there always inspires me when I return to the [[kitchen|Delicatessen Chez Genevieve]].
+
+
 
 
  &lt;&lt;heblink [[האחים]]&gt;&gt;
@@ -10269,6 +10278,12 @@ The grass after rain, is greenish green.
 
 
 </pre>
+</div>
+<div created="20200216170034035" modified="20200216170120018" tags="TV [[TV Series]]" title="The Wire">
+<pre>
+[img[pictures/the-wire.jpg]]
+
+ &lt;&lt;heblink [[הסמויה]]&gt;&gt;</pre>
 </div>
 <div created="20200115161700360" modified="20200115162215492" tags="Houses 9-side-wishing-star" title="the wishing star 01">
 <pre>[img[pictures/hadira.jpg]]
