--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="האוס [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216161506249" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216170017070" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12022,7 +12022,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20180414181844848" modified="20200216163222683" tags="סדרות מוזיקה בתים טלוויזיה" title="האוס">
+<div created="20180414181844848" modified="20200216170151922" tags="סדרות מוזיקה בתים טלוויזיה" title="האוס">
 <pre>[img[pictures/house.jpg]]
 
 !!![[הצוות]]:
@@ -12673,7 +12673,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20180619140440878" modified="20190310195353678" tags="סדרות טלוויזיה" title="הסמויה">
+<div created="20180619140440878" modified="20200216170219800" tags="סדרות טלוויזיה" title="הסמויה">
 <pre>[img[pictures/the-wire.jpg]]
 
 !!![[אירי]]:
@@ -12681,6 +12681,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 על מה [[לסטר פרימן|https://www.imdb.com/name/nm0676370/?ref_=tt_cl_t9]] חושב כשהוא בונה מיניאטורות של רהיטים עתיקים? על [[האזנות סתר|https://www.imdb.com/title/tt0306414/]] כמובן.
 ומה קורה עם [[דוקי|https://www.imdb.com/name/nm2369266/?ref_=ttfc_fc_cl_t32]] הילד [[הנפלא|https://www.youtube.com/watch?v=bqY7nfHBm24]] מחבורת הילדים הנפלאה של עונה ארבע? ממליצה לכם לראות גם אם יהיו רגעים בהם לבכם יישבר.
 
+
+&lt;&lt;englink [[The Wire]]&gt;&gt;
 </pre>
 </div>
 <div created="20170705183317472" modified="20190617133543511" tags="[[המטבח על פי ז'נבייב]] בתים [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="הספלים מהם אנו שותים">
