--- a/english.html
+++ b/english.html
@@ -8452,7 +8452,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The Wire]]" title="$:/StoryList">
+<div list="[[Harry Dean Stanton]] [[The Wire]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8472,7 +8472,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216165527333" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216170425482" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9278,10 +9278,13 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 
 </pre>
 </div>
-<div created="20200213170345269" modified="20200213170549578" tags="[[Outer sisters]] Films" title="Harry Dean Stanton">
+<div created="20200213170345269" modified="20200216170828354" tags="[[Outer sisters]] Films" title="Harry Dean Stanton">
 <pre>[img[pictures/harry-dean-stanton.jpg]]
 
-&lt;&lt;list-links filter:&quot;[tag[Harry Dean Stanton ]]&quot;&gt;&gt;
+!!![[Yoyo]]:
+
+[[Yesterday|https://www.theguardian.com/film/2017/sep/15/harry-dean-stanton-actor-dies-paris-texas-alien-repo-man]] [[Harry Dean Stanton|https://www.imdb.com/name/nm0001765/]] passed away, who was for me, more than anything, Travis from [[Paris-Texas|https://www.imdb.com/title/tt0087884/?ref_=nmbio_mbio]].   
+
 
  &lt;&lt;heblink [[הארי דין סטנטון]]&gt;&gt;
 </pre>
